--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-node_modules
+/.phpunit.cache
+/node_modules
+/storage/*
+/storage/*.key
+/storage/frameworks/views
+/storage/frameworks/cache
+/vendor
+.env.backup
+.env.production
+.phpactor.json
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
