--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "chart.js": "^4.4.7"
+        "chart.js": "^4.4.7",
+        "flowbite": "^3.1.2"
     }
 }
